--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 						<region>${region}</region>
 						<workers>${workers}</workers>
 						<workerType>${workerType}</workerType>
+						<objectStoreV2>true</objectStoreV2>
 						<!-- 					<properties> -->
 						<!-- 						<key>value</key> -->
 						<!-- 					</properties> -->
