--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -151,8 +151,8 @@ jobs:
         mvn deploy -DmuleDeploy \
         -D${{ env.anypointPlatformBaseUriProperty }}=${{ env.anypointPlatformBaseUri }}
         -D${{ env.muleVersionProperty }}=${{ env.muleVersion }}
-        -D${{ env.anypointPlatformUsername }}="$USERNAME"
-        -D${{ env.anypointPlatformPassword }}="$PASSWORD"
+        -D${{ env.anypointPlatformUsername }}=${{ secrets.ANYPOINT_USERNAME_SANDBOX }}
+        -D${{ env.anypointPlatformPassword }}=${{ secrets.ANYPOINT_PASSWORD_SANDBO }}
         -D${{ env.applicationNameProperty }}=${{ env.applicationName }}
         -D${{ env.deploymentRegionProperty }}=${{ env.region }}
         -D${{ env.workersProperty }}=${{ env.workers }}
