--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -148,7 +148,7 @@ jobs:
         PASSWORD: ${{ secrets.ANYPOINT_PASSWORD_SANDBOX }}
       run: |
         artifactName=$(ls *.jar | head -1)
-        mvn deploy -DmuleDeploy \
+        mvn -X deploy -DmuleDeploy \
         -D${{ env.anypointPlatformBaseUriProperty }}=${{ env.anypointPlatformBaseUri }}
         -D${{ env.muleVersionProperty }}=${{ env.muleVersion }}
         -D${{ env.anypointPlatformUsername }}=${{ secrets.ANYPOINT_USERNAME_SANDBOX }}
