--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -151,6 +151,7 @@ jobs:
         mvn -X deploy -DmuleDeploy -DskipMunitTests
         -D${{ env.anypointPlatformBaseUriProperty }}=${{ env.anypointPlatformBaseUri }}
         -D${{ env.muleVersionProperty }}=${{ env.muleVersion }}
+        -D${{ env.deploymentRegionProperty }}=${{ env.region }}
         -D${{ env.anypointPlatformUsername }}=${{ env.USERNAME }}
         -D${{ env.anypointPlatformPassword }}=${{ env.PASSWORD }}
         -D${{ env.applicationNameProperty }}=${{ env.applicationName }}
