--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 						<applicationName>${appname}</applicationName>
 						<environment>${env}</environment>
 						<region>${region}</region>
+						<target>${target}</target>
 						<workers>${workers}</workers>
 						<workerType>${workerType}</workerType>
 						<objectStoreV2>true</objectStoreV2>
