--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,7 +26,7 @@ env:
                                                                                               #                  XLARGE (4 vCores)
                                                                                               #                  XXLARGE (8 vCores)
                                                                                               #                  4XLARGE (16 vCores)
-  region: "us-east-1"                                                                           # must match DLB and VPC region. refer to parameter syntax at https://docs.mulesoft.com/mule-runtime/4.3/deploy-to-cloudhub#cloudhub-deploy-reference
+  region: "us-east-2"                                                                           # must match DLB and VPC region. refer to parameter syntax at https://docs.mulesoft.com/mule-runtime/4.3/deploy-to-cloudhub#cloudhub-deploy-reference
   applicationName: "cicddemo-myfirst"                                               # Application Name in Runtime Manager. Use the standard format ddb-{mule app name}-{env}-{region name}
                                                                                               # Use DDB standard naming convention for region name (use1 for us-east-1; euc1 for eu-central-1; apn1 for apac-north-1; ru for Russia).
   # **************************************** API MANAGER PROPERTIES **********************************************************************************************************
@@ -144,8 +144,8 @@ jobs:
     
     - name: Deploy to Sandbox
       env:
-        USERNAME: ${{ secrets.ANYPOINT_USERNAME_SANDBOX }}
-        PASSWORD: ${{ secrets.ANYPOINT_PASSWORD_SANDBOX }}
+        USERNAME: "kingraj7_1"
+        PASSWORD: "Ra@mithu1"
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn -e deploy -DmuleDeploy -DskipMunitTests
@@ -156,3 +156,5 @@ jobs:
         -D${{ env.workersProperty }}=${{ env.workers }}
         -D${{ env.workerTypeProperty }}=${{ env.workerType }}
         -D${{ env.anypointPlatformEnvProperty }}=${{ env.workflowEnv }}
+        -D${{ env.anypointPlatformUsername }}=${{ env.USERNAME }}
+        -D${{ env.anypointPlatformPassword }}=${{ env.PASSWORD }}
