--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,9 @@
 						<password>${anypoint.password}</password>
 						<applicationName>${appname}</applicationName>
 						<environment>${env}</environment>
-						<region>${region}</region>
+						<!--region>${region}</region-->
+						<businessGroup>${bg}</businessGroup>
+						<businessGroupId>${bgId}</businessGroupId>
 						<workers>${workers}</workers>
 						<workerType>${workerType}</workerType>
 						<objectStoreV2>true</objectStoreV2>
