--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
 					<cloudHubDeployment>
 						<uri>${anypointPlatformBaseUri}</uri>
 						<muleVersion>${app.runtime}</muleVersion>
-						<username>${anypoint.username}</username>
-						<password>${anypoint.password}</password>
+						<username>${username}</username>
+						<password>${password}</password>
 						<applicationName>${appname}</applicationName>
 						<environment>${env}</environment>
 						<!--region>${region}</region-->
