--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 						<applicationName>${appname}</applicationName>
 						<environment>${env}</environment>
 						<!--region>${region}</region-->
-						<businessGroup>${bg}</businessGroup>
-						<businessGroupId>${bgId}</businessGroupId>
+						<!--businessGroup>${bg}</businessGroup-->
+						<!--businessGroupId>${bgId}</businessGroupId-->
 						<workers>${workers}</workers>
 						<workerType>${workerType}</workerType>
 						<objectStoreV2>true</objectStoreV2>
