--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@
 name: TestCICD Pipeline
 on:
   pull_request:
-    branches: [dev]
+    branches: [develop]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -46,8 +46,18 @@ jobs:
         name: artifacts
     - name: Deploy to CloudHub
       env:
-        USERNAME: ${{ secrets.ANYPOINT_USERNAME }}
-        PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
+        USERNAME: ${{ secrets.ANYPOINT_USERNAME_SANDBOX }}
+        PASSWORD: ${{ secrets.ANYPOINT_PASSWORD_SANDBOX }}
+        BASEURI: ${{ secrets.ANYPOINTPLATFORMBASEURI }}
       run: |
         artifactName=$(ls *.jar | head -1)
-        mvn package deploy -DmuleDeploy -Danypoint.env=Sandbox -Danypoint.appName=githubactionsci-cdpipeline-dev -Danypoint.username=${{ secrets.ANYPOINT_USERNAME }} -Danypoint.password=${{ secrets.ANYPOINT_PASSWORD }} -Danypoint.muleVersion=4.3.0 -Danypoint.region=us-west-1 -Danypoint.workers=1
+        mvn package deploy -DmuleDeploy -DskipMunitTests 
+        -Danypoint.env=Sandbox 
+        -Danypoint.appName=cicddemo-dev1 
+        -Danypoint.username=${{ env.USERNAME }} 
+        -Danypoint.password=${{ env.PASSWORD }} 
+        -Danypoint.muleVersion=4.4.0 
+        -Danypoint.region=us-east-2 
+        -Danypoint.workers=1 
+        -DworkerType=Micro
+        -DanypointPlatformBaseUri=${{ env.BASEURI }}
