--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,8 +1,9 @@
 # This workflow will build a MuleSoft project and deploy to CloudHub
 name: TestCICD Pipeline
+
 on:
-  pull_request:
-    branches: [develop]
+  push:
+    branches: [ develop ]
 jobs:
   build:
     runs-on: ubuntu-latest
