--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,7 +52,8 @@ jobs:
         BASEURI: ${{ secrets.ANYPOINTPLATFORMBASEURI }}
       run: |
         artifactName=$(ls *.jar | head -1)
-        mvn package deploy -DmuleDeploy -DskipMunitTests 
+        mvn mule:deploy -DmuleDeploy -DskipMunitTests
+        -Dmule.artifact=$artifactName
         -Danypoint.env=Sandbox 
         "-Danypoint.appName=cicddemo-dev1"
         "-Danypoint.username=${{ env.USERNAME }}" 
