--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,7 +5,7 @@ name: Workflow to deploy to cloud hub
 # Controls when the workflow will run
 on:
   pull_request:
-    branches: [ "develop" ]
+    branches: [ develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
