--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
 
-	<name>cicddemo</name>
+	<name>cicddemo-xyxxxx</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -62,6 +62,12 @@
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sockets-connector</artifactId>
 			<version>1.2.3</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>9db749ad-73ea-4258-94c3-7d113a95d122</groupId>
+			<artifactId>duck-creek-services</artifactId>
+			<version>1.0.13</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
